# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-09-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * cloudi_service_http_cowboy multipart fixes

2013-09-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * For cloudi_service_http_cowboy, a service request timeout using
      405 responses gets an empty "allow" HTTP header
    * Add non-standard HTTP header request info entries for
      tracking a multipart sequence of service requests

2013-09-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add CLOUDI_CONFIGURE_ARGS env variable for rebar usage
    * Add cloudi_service:return/2 and cloudi_service:return/3 to make
      internal service return calls easier
    * Add multipart support to cloudi_service_http_cowboy

2013-09-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi:timeout_milliseconds() and cloudi:priority()
    * Fixes for cloudi_service_db
    * Edoc documentation updated

2013-09-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the scope script parallel to speedup the initial
      build process
    * Add initial version of cloudi_service_db, a simple in-memory database
    * Update trie

2013-09-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add support for update-deps of CloudI as a rebar dependency
    * Add an options list to cloudi_service_zeromq
    * Add the process_metadata option to cloudi_service_zeromq for
      tunneling RequestInfo and ResponseInfo within ZeroMQ requests
      automatically
    * Add endian configuration to cloudi_service_db_pgsql 
      for binary request responses
    * Add endian configuration to cloudi_service_zeromq
      for ZeroMQ service request metadata size integer encoding

2013-09-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Simplify the rebar integration by removing the version number from
      the installation path prefix when a configuration command line argument